# apibacked

./: .env.example  .gitignore  .vercelignore  DEPLOY.md  Procfile  QUICK_START.md  README.md  VERCEL_DEPLOY.md  app.py  diabetes_model.joblib  model_metadata.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
