[project]
name = "diabetes-prediction-api"
version = "1.0.0"
description = "REST API for diabetes risk prediction using XGBoost ML model"
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.vercel]
python-version = "3.12"
