[project]
name = "diabetes-prediction-api"
version = "1.0.0"
description = "REST API for diabetes risk prediction using XGBoost ML model"
requires-python = ">=3.12"
dependencies = [
    "setuptools>=65.5.0",
    "Flask==3.0.3",
    "Flask-Cors==4.0.1",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "xgboost==2.1.0",
    "joblib==1.4.2"
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"
